--- a/about/assets/stylesheet.css
+++ b/about/assets/stylesheet.css
@@ -60,368 +60,415 @@ select {
 }
 /* --------------------- GLOBAL ------------------- */
 html {
-   font-size: 62.5%;
+  font-size: 62.5%;
 }
 body {
-    font-family: 'Courier Prime', monospace;
-    font-weight: 400;
-    background-color: #F4EADD;
+  font-family: "Courier Prime", monospace;
+  font-weight: 400;
+  background-color: #f4eadd;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 a:link {
-    color: #23211E;
+  color: #23211e;
 }
 a:visited {
-    color: #23211E;
+  color: #23211e;
 }
 a:hover {
-    color: #B490FF;
+  color: #b490ff;
 }
 #about {
-    color: #B490FF;
-    text-decoration: none;
+  color: #b490ff;
+  text-decoration: none;
 }
 /* --------------------- HEADER ------------------- */
 header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 2.1rem 2.5rem 0rem;
+  padding-bottom: 2rem;
+  border-bottom: 1px solid #23211e;
+}
+.logo-header {
+  display: flex;
+  align-items: baseline;
+  width: auto;
+}
+.logo-header svg {
+  margin-right: 1rem;
+}
+#logo a {
+  color: #b490ff;
+  font-weight: bold;
+  font-size: 2.3rem;
+}
+nav {
+  font-family: "Lora", serif;
+  font-weight: 700;
+  font-size: 3.1rem;
+  line-height: 3.9rem;
+  width: auto;
+}
+.nav-links {
+  display: none;
+}
+#menu-open {
+  display: inline;
+  padding-right: 0;
+}
+#dark-light-mode {
+  display: none;
+}
+@media (min-width: 720px) {
+  header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 2.1rem 2.5rem 0rem;
-    padding-bottom: 2rem;
-    border-bottom: 1px solid #23211E;
-}
-.logo-header {
+    padding-bottom: 0.2rem;
+    margin: 5.4rem 8rem 0rem;
+  }
+  .logo-header {
     display: flex;
     align-items: flex-end;
-    width: auto;
-}
-.logo-header svg {
-    margin-right: 1rem;
-}
-#logo a {
-    color: #B490FF;
-    font-weight: bold;
-    font-size: 2.3rem;
-}
-nav {
-    font-family: 'Lora', serif;
+  }
+  .logo-header svg {
+    margin-right: 3rem;
+  }
+  nav {
+    font-family: "Lora", serif;
     font-weight: 700;
-    font-size: 3.1rem;
-    line-height: 3.9rem;
-    width: auto;
-}
-.nav-links {
-    display: none;
-}
-#menu-open {
+    font-size: 2.3rem;
+    line-height: 2.9rem;
+    width: 180px;
+  }
+  .nav-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+  li {
     display: inline;
-    padding-right: 0;
-}
-#dark-light-mode {
+  }
+  #menu-open {
     display: none;
+  }
+  #dark-light-mode {
+    display: block;
+    text-align: right;
+    margin-right: 8rem;
+  }
 }
-@media (min-width: 720px) {
-    header {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        padding-bottom: .2rem;
-        margin: 5.4rem 8rem 0rem;
-    }
-    .logo-header {
-        display: flex;
-        align-items: flex-end;
-        width: auto;
-    }
-    .logo-header svg {
-        margin-right: 3rem;
-    }
-    nav {
-        font-family: 'Lora', serif;
-        font-weight: 700;
-        font-size: 2.3rem;
-        line-height: 2.9rem;
-        width: 180px; 
-    }
-    .nav-links {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-    }
-    li {
-        display: inline;
-    }
-    #menu-open {
-        display: none;
-    }
-    #dark-light-mode {
-        display: block;
-        text-align: right;
-        margin-right: 8rem;
-    }
-}
+
 /* --------------------- MAIN ------------------- */
 main {
-    margin: 5rem 2.5rem 2rem;
+  margin: 5rem 2.5rem 2rem;
+}
+.double-title {
+  position: absolute;
+  color: #b490ff;
+  font-family: "Lora", serif;
+  font-weight: 700;
+  font-size: 4.9rem;
+  line-height: 6.2rem;
+  text-transform: uppercase;
 }
 h1 {
-    position: absolute;
-    color: #CEC5B9;
-    font-family: 'Lora', serif;
-    font-weight: 700;
-    font-size: 4.9rem;
-    line-height: 6.2rem;
-    text-transform: uppercase;
+  position: absolute;
+  top: 4.1rem;
+  font-family: "Lora", serif;
+  font-weight: 700;
+  font-size: 3.9rem;
+  line-height: 5rem;
 }
-h2 {
-    position: absolute;
-    top: 4.1rem;
-    font-family: 'Lora', serif;
-    font-weight: 700;
-    font-size: 3.9rem;
-    line-height: 5rem;
-}
-.heading {
-    position: relative;
-    height: 8.8rem;
-    margin-bottom: 5rem;
-    min-width: 350px;
+#heading {
+  position: relative;
+  height: 8.8rem;
+  margin-bottom: 5rem;
+  min-width: 350px;
 }
 p {
-    font-size: 2rem;
-    line-height: 2.2rem;
-    padding-bottom: 2rem;
+  font-size: 2rem;
+  line-height: 2.2rem;
+  padding-bottom: 2rem;
 }
 .description {
-    margin-bottom: 5rem;
-    max-width: 35rem;
+  margin-bottom: 5rem;
+  max-width: 35rem;
 }
 .section-2 {
-    margin-top: 5rem;
+  margin-top: 5rem;
 }
 .lines {
-    border-bottom: 1px solid #CEC5B9;
-    padding: 2rem 0;
+  border-bottom: 1px solid #cec5b9;
+  padding: 2rem 0;
 }
 .studies {
-    border-top: 1px solid #CEC5B9;
-    max-width: 365px;
+  border-top: 1px solid #cec5b9;
+  max-width: 365px;
 }
 .section-3 {
-    padding-top: 5rem;
-    margin-bottom: 5rem;
+  padding-top: 5rem;
+  margin-bottom: 5rem;
 }
 #contact {
-    position: relative;
-    margin: auto;
-    width: auto;
-    border-top: 1px solid #CEC5B9;
-    padding-top: 5rem;
+  position: relative;
+  margin: auto;
+  width: auto;
+  border-top: 1px solid #cec5b9;
+  padding-top: 5rem;
 }
-.shadow {
-    color: #CEC5B9;
-    font-family: 'Lora', serif;
-    font-weight: 700;
-    font-size: 4.9rem;
-    line-height: 6.2rem;
+#contact .double-title {
+  position: inherit;
+  color: #b490ff;
+  font-family: "Lora", serif;
+  font-weight: 700;
+  font-size: 4.9rem;
+  line-height: 6.2rem;
+  text-transform: capitalize;
+  padding-bottom: 3rem;
 }
 #contact h2 {
-    position: absolute;
-    top: 8.1rem;
-    font-family: 'Lora', serif;
-    font-weight: 700;
-    font-size: 3.9rem;
-    line-height: 5rem;
+  position: absolute;
+  top: 8.1rem;
+  font-family: "Lora", serif;
+  font-weight: 700;
+  font-size: 3.9rem;
+  line-height: 5rem;
 }
-h3 {
-    font-family: 'Lora', serif;
-    font-weight: 700;
-    font-size: 2.5rem;
-    line-height: 3.2rem;
-    padding-bottom: 3rem;
+#contact h3 {
+  font-family: "Lora", serif;
+  font-weight: 700;
+  font-size: 2.5rem;
+  line-height: 3.2rem;
+  padding-bottom: 3rem;
 }
 #contact p {
-    padding-bottom: 3rem;
+  padding-bottom: 3rem;
 }
 .contact-links a {
-    font-family: 'Courier Prime', monospace;
-    font-weight: 400;
-    font-size: 2rem;
-    line-height: 2.2rem;
-    text-decoration: underline;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 4.5rem;
+  font-family: "Courier Prime", monospace;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 2.2rem;
+  text-decoration: underline;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 4.5rem;
 }
 .media {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 2rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2rem;
 }
 #contact h4 {
-    font-family: 'Lora', serif;
-    font-weight: 700;
-    font-size: 3.1rem;
-    line-height: 3.9rem;
-    padding: 3rem 0;
-    color: #B490FF;
-    padding: 6rem 0 3rem;
-    text-align: center;
+  font-family: "Lora", serif;
+  font-weight: 700;
+  font-size: 3.1rem;
+  line-height: 3.9rem;
+  padding: 3rem 0;
+  color: #b490ff;
+  padding: 6rem 0 3rem;
+  text-align: center;
 }
 @media (min-width: 720px) {
-    main {
-        margin: 5.4rem 12rem 2rem;
-    }
-    h1 {
-        position: absolute;
-        font-size: 9rem;
-        line-height: 11.5rem;
-        text-transform: uppercase;
-    }
-    h2 {
-        position: absolute;
-        top: 5.7rem;
-        font-size: 6.4rem;
-        line-height: 8rem;
-    }
-    .heading {
-        position: relative;
-        height: 8.8rem;
-        margin-bottom: 7rem;
-        min-width: 600px;
-    }
-    p {
-        font-size: 2.3rem;
-        line-height: 2.5rem;
-        padding-bottom: 2.3rem;
-    }
-    .description {
-        margin-bottom: 4rem;
-        max-width: 60rem;
-    }
-    .shadow {
-        color: #CEC5B9;
-        font-family: 'Lora', serif;
-        font-weight: 700;
-        font-size: 9rem;
-        line-height: 11.5rem;
-    }
-    #contact h2 {
-        top: 11.1rem;
-        left: .5rem;
-        font-size: 6.4rem;
-        line-height: 8rem;
-    }
-    #contact p {
-        padding-top: 2rem;
-    }
-    #contact .shadow {
-        padding-top: 0;
-    }
-    .contact-links {
-        padding-right: 15rem;
-        padding-top: 10rem;
-    }
-    #contact h4 {
-        font-size: 6.4rem;
-        line-height: 8.1rem;
-        padding-top: 10rem;
-    }
+  main {
+    margin: 5.4rem 12rem 2rem;
+  }
+  #heading .double-title {
+    position: absolute;
+    font-size: 9rem;
+    line-height: 11.5rem;
+    text-transform: uppercase;
+  }
+  h1 {
+    position: absolute;
+    top: 5.7rem;
+    font-size: 6.4rem;
+    line-height: 8rem;
+  }
+  #heading {
+    position: relative;
+    height: 8.8rem;
+    margin-bottom: 7rem;
+    min-width: 600px;
+  }
+  p {
+    font-size: 2.3rem;
+    line-height: 2.5rem;
+    padding-bottom: 2.3rem;
+  }
+  .description {
+    margin-bottom: 4rem;
+    max-width: 60rem;
+  }
+  #contact .double-title {
+    color: #b490ff;
+    font-family: "Lora", serif;
+    font-weight: 700;
+    font-size: 9rem;
+    line-height: 11.5rem;
+  }
+  #contact h2 {
+    top: 11.1rem;
+    left: 0.5rem;
+    font-size: 6.4rem;
+    line-height: 8rem;
+  }
+  #contact p {
+    padding-top: 2rem;
+  }
+  #contact .double-title {
+    padding-top: 0;
+  }
+  #contact h3 {
+    font-family: "Lora", serif;
+    font-weight: 700;
+    font-size: 3.2rem;
+    line-height: 4.1rem;
+  }
+  .contact-links {
+    padding-right: 15rem;
+    padding-top: 3rem;
+  }
+  #contact h4 {
+    font-size: 6.4rem;
+    line-height: 8.1rem;
+    padding-top: 10rem;
+  }
 }
 @media (min-width: 1280px) {
-    .section-1 {
-        display: flex;
-        justify-content: space-between;
-    }
-    .section-2 {
-        position: relative;
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-between;
-        margin-top: 10rem;
-    }
-    .profile {
-        margin-left: 10rem;
-    }
-    .lines {
-        border-bottom: 1px solid #CEC5B9;
-        padding: 2rem 0;
-    }
-    .studies {
-        border-top: 1px solid #CEC5B9;
-        max-width: 600px;
-    }
-    .profile-2 {
-        position: absolute;
-        top: -160px;
-    }
-    .section-3 {
-        border-left: 1px solid #CEC5B9;
-        padding-top: 0;
-        padding-left: 6.6rem;
-        max-width: 600px;
-        margin: 20rem 0 15rem;
-    }
-    .last-line {
-        padding: 0;
-    }
+  .section-1 {
+    display: flex;
+    justify-content: space-between;
+  }
+  .section-2 {
+    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+  .profile {
+    margin-left: 10rem;
+    margin-bottom: 10rem;
+  }
+  .lines {
+    border-bottom: 1px solid #cec5b9;
+    padding: 2rem 0;
+  }
+  .studies {
+    border-top: 1px solid #cec5b9;
+    max-width: 600px;
+  }
+  .profile-2 {
+    margin-top: -180px;
+    margin-right: 10rem;
+  }
+  .section-3 {
+    border-left: 1px solid #cec5b9;
+    padding-top: 0;
+    padding-left: 6.6rem;
+    max-width: 600px;
+    margin: 10rem 0 12rem;
+  }
+  .last-line {
+    padding: 0;
+  }
+  .contact-links {
+    padding-right: 15rem;
+    padding-top: 10rem;
+  }
 }
 /* ---------------------- FOOTER ------------------ */
 footer {
-    display: flex;
-    flex-direction: column;
-    margin: 0 2.5rem 5rem;
-    border-top: 1px solid #CEC5B9;
+  display: flex;
+  flex-direction: column;
+  margin: 0 2.5rem 5rem;
+  border-top: 1px solid #cec5b9;
 }
 footer #logo {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 4rem;
 }
 footer #logo a {
-    padding: 3.5rem 0 0;
-    text-decoration: underline;
-    font-size: 2rem;
+  padding: 3.5rem 0 0;
+  text-decoration: underline;
+  font-size: 2rem;
 }
 .logo-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .funny-link-desktop {
-    display: none;
+  display: none;
 }
+
 @media (min-width: 720px) {
-    footer {
-        margin: 0 2.5rem 3rem;
-    }
-    footer #logo {
-        flex-direction: row-reverse;
-        justify-content: space-between;
-        padding: 0;
-    }
-    footer #logo a {
-        padding: 3.5rem 0 0 5rem;
-        font-size: 2.3rem;
-    }
-    .logo-footer {
-        display: flex;
-        flex-direction: row-reverse;
-    }
-    .logo-footer svg {
-        margin: 2rem 5rem 0 3rem;
-    }
-    .funny-link-mobile {
-        display: none;
-    }
-    .funny-link-desktop {
-        display: inherit;
-        font-size: 1.6rem;
-    }
+  footer {
+    margin: 0 2.5rem 3rem;
+  }
+  footer #logo {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    padding: 0;
+  }
+  footer #logo a {
+    padding: 3.5rem 0 0 5rem;
+    font-size: 2.3rem;
+  }
+  .logo-footer {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .logo-footer svg {
+    margin: 2rem 5rem 0 3rem;
+  }
+  .funny-link-mobile {
+    display: none;
+  }
+  .funny-link-desktop {
+    display: inherit;
+    font-size: 1.6rem;
+  }
+}
+
+/* -------------- MENU FOR MOBILE -------------- */
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: #b490ff;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  text-align: center;
+}
+
+.sidenav a {
+  padding: 6rem 0 0;
+  text-decoration: none;
+  font-size: 25px;
+  color: #f4eadd;
+  display: block;
+  transition: 0.3s;
+
+  font-size: 3.1rem;
+  line-height: 3.9rem;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 22px;
+  right: 25px;
 }
