--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -166,9 +166,7 @@ nav {
     display: none;
   }
   #dark-light-mode {
-    display: block;
-    text-align: right;
-    margin-right: 8rem;
+    display: none;
   }
 }
 /* ---------------------- HEADER ------------------- */
