--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -103,22 +103,6 @@ a:hover {
 #work {
   text-decoration: none;
 }
-#buttonTop {
-  display: none;
-  position: fixed;
-  bottom: 120px;
-  right: 30px;
-  z-index: 99;
-  cursor: pointer;
-  background-color: var(--background-color);
-  text-decoration: none;
-  border: none;
-  outline: none;
-}
-#buttonTop path, #buttonTop circle {
-  fill: var(--highlight-color);
-  stroke: var(--background-color);
-}
 .gif {
   padding-top: 1rem;
   margin: auto;
@@ -237,6 +221,22 @@ nav {
     align-items: flex-start;
     padding-left: 2rem;
     margin-top: 2rem;
+  }
+  #buttonTop {
+    display: none;
+    position: fixed;
+    bottom: 120px;
+    right: 30px;
+    z-index: 99;
+    cursor: pointer;
+    background-color: var(--background-color);
+    text-decoration: none;
+    border: none;
+    outline: none;
+  }
+  #buttonTop path, #buttonTop circle {
+    fill: var(--highlight-color);
+    stroke: var(--background-color);
   }
 }
 /* ---------------------- HEADER ------------------- */
@@ -394,7 +394,7 @@ h3 {
 }
 p {
   font-size: 2rem;
-  line-height: 2.2rem;
+  line-height: 2.5rem;
 }
 .description {
   text-align: center;
@@ -468,9 +468,10 @@ b {
 }
 .the-section h3 {
   border-top: 0;
+  margin-top: 5rem;
 }
 .the-section p {
-  max-width: 55rem;
+  max-width: 72rem;
 }
 .the-section img {
   margin: 2rem 0;
@@ -479,16 +480,16 @@ b {
   font-family: "Lora", serif;
   font-weight: 700;
   font-size: 2.5rem;
-  padding: 2rem 0;
-}
-.text-wrapper-flex {
   margin-top: 4rem;
+}
+.text-wrapper-flex p {
+  margin-top: 2rem;
 }
 .img-wrapper-flex p {
   margin-bottom: 2rem;
 }
 .the-section.left {
-  padding-bottom: 2rem;
+  margin-bottom: 4rem;
 }
 @media (min-width: 82em) {
   body {
@@ -523,7 +524,7 @@ b {
   }
   p {
     font-size: 2.3rem;
-    line-height: 2.5rem;
+    line-height: 3rem;
   }
   .description {
     max-width: 63.7rem;
@@ -558,6 +559,7 @@ b {
   .project-description p {
     font-size: 2rem;
     margin: 3rem 0 4rem;
+    line-height: 2.7rem;
   }
   .project-details p {
     margin: 2rem 0;
@@ -572,7 +574,7 @@ b {
     margin: 4rem 4rem 4rem 0;
   }
   .text-wrapper-flex {
-    margin: 4rem 4rem 4rem 0;
+    margin: 2rem 4rem 4rem 0;
   }
   .the-section h4, .wrapper h4 {
     font-size: 3.2rem;
@@ -592,10 +594,14 @@ b {
 #contact h3 {
   font-size: 2.5rem;
   line-height: 3.2rem;
-  padding-bottom: 2rem;
+  margin-top: 4rem;
 }
-#contact p {
-  padding-bottom: 3rem;
+.contact-links p {
+  margin: 2rem 0;
+}
+#contact .description {
+  margin: auto;
+  padding: 0;
 }
 .contact-links a {
   font-family: "Courier Prime", monospace;
@@ -603,10 +609,11 @@ b {
   font-size: 2rem;
   line-height: 2.2rem;
   text-decoration: underline;
+  margin-top: 2rem;
 }
 .media {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 0 2rem;
 }
 .media path {
